generated/checkers/gen/AllGen-Buffer-Overflow-0f8ca019544a252d1afb468ce840c6dcbac73af4/build_logs/syntax-repair-04/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘bool {anonymous}::containsDeclRefToVar(const clang::Expr*, const clang::VarDecl*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:90:25: error: ‘class clang::Expr’ has no member named ‘walk’
   90 |   const_cast<Expr*>(E)->walk(Vst);
      |                         ^~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘bool {anonymous}::isGuardedByEnclosingIfLtCap(const clang::ASTContext&, const clang::ArraySubscriptExpr*, const clang::VarDecl*, uint64_t)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:188:34: error: passing ‘const clang::ASTContext’ as ‘this’ argument discards qualifiers [-fpermissive]
  188 |     auto Parents = Ctx.getParents(*Curr);
      |                    ~~~~~~~~~~~~~~^~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Checkers/utility.h:11,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:6:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/ParentMapContext.h:131:25: note:   in call to ‘clang::DynTypedNodeList clang::ASTContext::getParents(const NodeT&) [with NodeT = clang::Stmt]’
  131 | inline DynTypedNodeList ASTContext::getParents(const NodeT &Node) {
      |                         ^~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘bool {anonymous}::isGuardedByPrevIfGeBreak(const clang::ASTContext&, const clang::ArraySubscriptExpr*, const clang::VarDecl*, uint64_t)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:217:34: error: passing ‘const clang::ASTContext’ as ‘this’ argument discards qualifiers [-fpermissive]
  217 |     auto Parents = Ctx.getParents(*Containing);
      |                    ~~~~~~~~~~~~~~^~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Checkers/utility.h:11,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:6:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/ParentMapContext.h:131:25: note:   in call to ‘clang::DynTypedNodeList clang::ASTContext::getParents(const NodeT&) [with NodeT = clang::Stmt]’
  131 | inline DynTypedNodeList ASTContext::getParents(const NodeT &Node) {
      |                         ^~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:266:30: error: ‘class clang::Stmt’ has no member named ‘walk’
  266 |     const_cast<Stmt*>(Then)->walk(Finder);
      |                              ^~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::reportIssue(const clang::ArraySubscriptExpr*, const clang::VarDecl*, uint64_t, uint64_t, clang::ento::BugReporter&, const clang::ASTContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:365:42: error: no matching function for call to ‘clang::ento::PathDiagnosticLocation::createBegin(const clang::Expr*, const clang::SourceManager&, const clang::ASTContext&)’
  365 |       PathDiagnosticLocation::createBegin(ASE->getIdx(), BR.getSourceManager(), Ctx);
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:254:33: note: candidate: ‘static clang::ento::PathDiagnosticLocation clang::ento::PathDiagnosticLocation::createBegin(const clang::Decl*, const clang::SourceManager&)’
  254 |   static PathDiagnosticLocation createBegin(const Decl *D,
      |                                 ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:254:33: note:   candidate expects 2 arguments, 3 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:261:3: note: candidate: ‘static clang::ento::PathDiagnosticLocation clang::ento::PathDiagnosticLocation::createBegin(const clang::Decl*, const clang::SourceManager&, clang::ento::LocationOrAnalysisDeclContext)’
  261 |   createBegin(const Decl *D, const SourceManager &SM,
      |   ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:261:27: note:   no known conversion for argument 1 from ‘const clang::Expr*’ to ‘const clang::Decl*’
  261 |   createBegin(const Decl *D, const SourceManager &SM,
      |               ~~~~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:267:33: note: candidate: ‘static clang::ento::PathDiagnosticLocation clang::ento::PathDiagnosticLocation::createBegin(const clang::Stmt*, const clang::SourceManager&, clang::ento::LocationOrAnalysisDeclContext)’
  267 |   static PathDiagnosticLocation createBegin(const Stmt *S,
      |                                 ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:269:81: note:   no known conversion for argument 3 from ‘const clang::ASTContext’ to ‘clang::ento::LocationOrAnalysisDeclContext’ {aka ‘llvm::PointerUnion<const clang::LocationContext*, clang::AnalysisDeclContext*>’}
  269 |                                             const LocationOrAnalysisDeclContext LAC);
      |                                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::processForStmt(const clang::ForStmt*, const clang::ASTContext&, clang::ento::BugReporter&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:416:30: error: ‘class clang::Stmt’ has no member named ‘walk’
  416 |     const_cast<Stmt*>(Body)->walk(V);
      |                              ^~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkASTCodeBody(const clang::Decl*, clang::ento::AnalysisManager&, clang::ento::BugReporter&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:441:28: error: ‘class clang::Stmt’ has no member named ‘walk’
  441 |   const_cast<Stmt*>(Body)->walk(V);
      |                            ^~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
